# sync_select_files

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  INSTALL  Makefile  Makefile.am  NEWS  README.md  bootstrap  configure.ac  configure_sync_select.c  main.c  reinstall.sh
po/: sync_select_files.pot
po/eng/: hello.mo  hello.po
shr/: general_utils.h  window_utils.h
src/: Makefile.am  base.h  configure_host.h  general_utils.c  general_utils.h  libssfservers.c  libssfservers.h  servers.c  servers_management.c  servers_management.h  servers_mgmt.c  ssf-servers.c  ssf.AppWindow.glade  ssf.ServersManagement.glade  ssf.SsfAppWindow.glade  ssf.c  ssf.gresources.c  ssf.gresources.h  ssf.gresources.xml  ssf.h  ssf_app.c  ssf_app.h  ssf_diff_core.c  ssf_diff_core.h  ssf_invalid_project_dialog.c  ssf_invalid_project_dialog.h  ssf_select_server_dialog.c  ssf_select_server_dialog.h  ssf_window.c  ssf_window.h  sync_select_files.c  sync_select_files.ssf.gschema.xml  window_utils.c  window_utils.h
src/gui/: InvalidProjectDialog.glade
